# aurdash

./: Cargo.toml  LICENSE  README.md  README_MANAGER_INSTRUCTIONS.md  test_tui.rs
src/: app.rs  events.rs  main.rs
src/aur/: comments.rs  mod.rs  pkgbuild.rs  repo.rs  search.rs
src/install/: mod.rs  paru.rs
src/security/: mod.rs  scanner.rs
src/ui/: comments.rs  detail.rs  help.rs  manager.rs  mod.rs  search.rs  theme.rs
